fix docs of wrong endpoint
