# docs/swagger.yaml
@@ -445,6 +445,145 @@ paths:
         name: api_key
         required: true
         type: string
+      - in: formData
+        name: address_line_1
+        type: string
+      - in: formData
+        name: address_line_2
+        type: string
+      - in: formData
+        name: city
+        type: string
+      - in: formData
+        name: country
+        type: string
+      - in: formData
+        name: createdAt
+        type: string
+      - in: formData
+        name: date_of_birth
+        type: string
+      - in: formData
+        name: document_number
+        type: string
+      - in: formData
+        name: document_type
+        type: string
+      - in: formData
+        name: expiry_date
+        type: string
+      - in: formData
+        name: gender
+        type: string
+      - in: formData
+        name: id
+        type: integer
+      - in: formData
+        name: identity_and_selfie_image_url
+        type: string
+      - in: formData
+        name: identity_image_url
+        type: string
+      - in: formData
+        name: indonesiaAreaID
+        type: integer
+      - in: formData
+        name: issue_date
+        type: string
+      - in: formData
+        name: selfie_image_url
+        type: string
+      - in: formData
+        name: state
+        type: string
+      - in: formData
+        name: updatedAt
+        type: string
+      - in: formData
+        name: userID
+        type: integer
+      - in: formData
+        name: zip_code
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_response_model.SuccessAPIResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update user's detail
+      tags:
+      - User
+  /user-detail/update-identity-and-selfie-image:
+    put:
+      consumes:
+      - multipart/form-data
+      description: Usually this endpoint used to process kyc
+      parameters:
+      - description: Api Key
+        in: header
+        name: api_key
+        required: true
+        type: string
+      - description: User image that will be saved to the database_model
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_response_model.SuccessAPIResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update user's selfie + identity image
+      tags:
+      - User
+  /user-detail/update-identity-image:
+    put:
+      consumes:
+      - multipart/form-data
+      description: Usually this endpoint used to process kyc
+      parameters:
+      - description: Api Key
+        in: header
+        name: api_key
+        required: true
+        type: string
+      - description: User image that will be saved to the database_model
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api_response_model.SuccessAPIResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update user's identify image
+      tags:
+      - User
+  /user-detail/update-selfie-image:
+    put:
+      consumes:
+      - multipart/form-data
+      description: Usually this endpoint used to process kyc
+      parameters:
+      - description: Api Key
+        in: header
+        name: api_key
+        required: true
+        type: string
       - description: User image that will be saved to the database_model
         in: formData
         name: file
